app/assets/stylesheets/custom.css
/* ... */
.new-invoice-holder .inline-select.select-wrapper .dropdown-content li span {
    color: #454545;
    display: block;
    line-height: 22px;
    padding: 5px 10px;
    font-size: 14px;
    font-weight: 400; }

.modal .inline-select.small-select .caret {
    margin-bottom: 8px;
    right: 10px; }
.modal .inline-select.content-select {
    width: 122px;
    vertical-align: middle; }

.new-invoice-holder .inline-select.select-wrapper input.select-dropdown {
    border-bottom: none;
}

.new-invoice-holder .recurring_occurrences{
    height: 32px;
}

.invoice_template .select-wrapper .caret{
    display: none !important;
}

.date-field-style{
    font-size: 11px !important;
    text-transform: uppercase;
    margin: 0 !important;
    width: 71px !important;
    border-bottom: 0 !important;
    height: 1rem !important;
    box-shadow: none !important;
    font-weight: bold !important;
}
.date-wrapper{
    font-family: "Roboto", sans-serif;
}
.calendar-icon{
    font-size: 18px !important;
    vertical-align: bottom !important;
    color: #b5b5b5 !important;
    margin: 0 3px 0 -1px !important;
    top: -1px !important;
    position: relative !important;
}
.date-wrapper span.next-invoice-date{
    font-size: 11px;
    text-transform: uppercase;
}

.date-wrapper span.payment-date{
    margin-left: 20px;
}
.md-input label:before {
    content: '* ';
    color: red;
    font-weight: bold;
}
.btn-position{
    padding-top: 15px;
}
.new-invoice-holder .inline-select.select-wrapper.payment-term-dropdown .caret{
    bottom: 15px;
    width: 128px;
}
.inline-select.payment-term-dropdown .dropdown-content{
    min-width: 130px;
    width: 130px !important;
}
.invoice-select-align input.select-dropdown{
    text-align: center !important;
}
#payments_form .submit_payment_form:hover {
    background-color: #09b8e2;
    color: #fff;
    border-color: #09b8e2; }
.fields-container{
    padding-bottom: 5px !important;
}
.invoice-checkbox-position{
     margin-top: -5px;
 }
#reports-breadcrumb .select-wrapper.initialized .caret{
    padding-right: 45px;
}

